--- a/css/site.css
+++ b/css/site.css
@@ -209,32 +209,108 @@ button {
 
 .intro .bandMembers {
     font-size: 160%;
-    display: grid;
-
-    grid-template-rows: auto auto auto auto auto;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-areas:
-        "johnnyIndicator gtr junIndicator"
-        "johnnyTitle gtr junTitle"
-        "johnnyAka gtr junTitle"
-        "johnnyDesc gtr junDesc"
-        "johnnyImg gtr junImg"
-        "johnnyTogetherImg gtr junMrJun";
 
     justify-items: center;
-
     text-align: center;
     flex-direction: row;
+    
+    /* Smallscreen: */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /*grid-template-rows: auto auto auto auto auto auto auto auto auto auto auto;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-areas:
+        "johnnyIndicator"
+        "johnnyTitle"
+        "johnnyAka"
+        "johnnyDesc"
+        "johnnyImg"
+        "johnnyTogetherImg"
+        "gtr"
+        "junIndicator"
+        "junTitle"
+        "junDesc"
+        "junImg";*/
+
 }
 
 .intro .bandMembers .centreSeparator {
-    background-image: url('../img/backgrounds/GuitarLoop/Vertical.svg');
-    background-repeat: repeat-y;
+    /* Smallscreen: */
+    background-image: url('../img/backgrounds/GuitarLoop/Horizontal.svg');
+    background-repeat: repeat-x;
     background-size: contain;
-    width: 80px;
+    width: 100%;
+    height: 80px;
 
-    margin-top: -200px;
-    height: calc(100% + 200px);
+    grid-area: gtr;
+}
+
+.intro .bandMembers .johnnyTogetherImg {
+
+    grid-area: johnnyTogetherImg;
+
+    margin: 50px -32px 10px 0;
+
+    transform: rotate(6deg);
+    padding: 15px;
+    padding-bottom: 50px;
+    box-sizing: border-box;
+}
+
+.intro .bandMembers .johnnyTogetherImgImg {
+    max-width: 45%;
+}
+
+.intro .bandMembers .junMrJun {
+    grid-area: junMrJun;
+    justify-self: flex-end;
+
+    margin-top: 50px;
+    margin-bottom: -100px;
+    padding: 15px;
+
+    max-width: 90%;
+    background-color: rgb(130, 130, 130);
+}
+
+@media (max-width: 1400px) {
+    .intro .bandMembers .johnnyImg, .intro .bandMembers .junImg {
+        max-width: 70%;
+        object-fit: scale-down;
+    }
+}
+
+@media (min-width: 1000px) {
+    /* Largescreen: */
+    .intro .bandMembers {
+        display: grid;
+        align-items: flex-start;
+
+        grid-template-rows: auto auto auto auto auto auto;
+        grid-template-columns: 1fr auto 1fr;
+        grid-template-areas:
+            "johnnyIndicator gtr junIndicator"
+            "johnnyTitle gtr junTitle"
+            "johnnyAka gtr junTitle"
+            "johnnyDesc gtr junDesc"
+            "johnnyImg gtr junImg"
+            "johnnyTogetherImg gtr junMrJun";
+    }
+
+    .intro .bandMembers .centreSeparator {
+        margin-top: -200px;
+        margin-left: 50%;
+
+        background-image: url('../img/backgrounds/GuitarLoop/Vertical.svg');
+        background-repeat: repeat-y;
+        width: 80px;
+        height: calc(100% + 250px);
+    }
+
+    .intro .bandMembers .johnnyTogetherImg {
+        margin-bottom: 0;
+    }
 }
 
 .intro .bandMembers .indicator {
@@ -255,43 +331,13 @@ button {
 }
 
 .intro .bandMembers .johnnyTitle { grid-area: johnnyTitle; }
-.intro .bandMembers .johnnyDesc { grid-area: johnnyDesc; }
+.intro .bandMembers .johnnyDesc { grid-area: johnnyDesc; padding-left: 30px; }
 .intro .bandMembers .johnnyImg { grid-area: johnnyImg; }
 .intro .bandMembers .johnnyIndicator { grid-area: johnnyIndicator; }
 .intro .bandMembers .junTitle { grid-area: junTitle; }
-.intro .bandMembers .junDesc { grid-area: junDesc; }
+.intro .bandMembers .junDesc { grid-area: junDesc; padding-left: 25px; }
 .intro .bandMembers .junImg { grid-area: junImg; }
 .intro .bandMembers .junIndicator { grid-area: junIndicator; }
-
-.intro .bandMembers .johnnyTogetherImg {
-    grid-area: johnnyTogetherImg;
-
-    margin: 50px -32px -50px 0;
-    margin-top: 50px;
-    margin-bottom: -50px;
-
-    transform: rotate(6deg);
-    padding: 15px;
-    padding-bottom: 50px;
-    box-sizing: border-box;
-}
-
-.intro .bandMembers .johnnyTogetherImgImg {
-    max-width: 40%;
-}
-
-.intro .bandMembers .junMrJun {
-    grid-area: junMrJun;
-    justify-self: flex-end;
-
-    margin-top: 50px;
-    margin-bottom: -100px;
-    padding: 15px;
-
-    max-width: 90%;
-    background-color: rgb(130, 130, 130);
-}
-
 
 .intro .otherBandMembers {
     margin-bottom: 100px;
