--- a/css/site.css
+++ b/css/site.css
@@ -135,6 +135,10 @@ html, body {
 .floating .panel .contents {
     grid-area: cont;
     padding: 10px;
+
+    width: 100%;
+    height: 100%;
+    border: none;
 }
 
 .floating .panel .page {
