Move font include to CSS

--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 /* If you see this, you should REALLY come chat with us over on the Discord server! */
 
 /* GENERAL: */
