--- a/css/site.css
+++ b/css/site.css
@@ -9,7 +9,6 @@ html, body {
     z-index: -2;
     width: 100%;
     height: 100%;
-    background-color: black;
 
     font-family: 'Roboto', sans-serif;
 }
@@ -161,6 +160,7 @@ html, body {
 
 .floating .panel .titlebar .title {
     font-weight: 700;
+    font-size: 125%;
     margin: 0;
     padding: 20px;
 }
