--- a/css/site.css
+++ b/css/site.css
@@ -86,14 +86,22 @@ html, body {
     background-color: rgb(85, 2, 2);
 }
 
+.backgroundContainer {
+    background-color: black;
+
+    position: fixed;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
+
 .background {
     opacity: 50%;
+
     background-image: url('../img/visuals/Opening.png');
     background-position: center;
     background-size: cover;
 
-    position: fixed;
-    z-index: -1;
     width: 100%;
     height: 100%;
 }
