--- a/menus/css/allMembers.css
+++ b/menus/css/allMembers.css
@@ -7,12 +7,10 @@ body {
     display: grid;
 
     grid-template-rows: auto;
-    grid-template-columns: auto 400px 1fr 350px auto;
+    grid-template-columns: auto 400px 1fr 1fr auto;
     grid-template-areas: "navLeft img txt list navRight";
 
     width: 100%;
-
-    overflow: auto;
 }
 
 .navLeft, .navRight {
@@ -41,16 +39,23 @@ body {
 
 .works {
     grid-area: list;
+    align-content: flex-end;
 }
 
 .list {
-    height: 250px;    
+    max-height: 250px;
     box-sizing: border-box;
 
     justify-self: center;
 
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-grow: 0;
+    flex-shrink: 0;
+
+    align-items: flex-start;
+
+    flex-wrap: wrap;
     overflow: auto;
 }
 
@@ -64,6 +69,7 @@ body {
     color: white;
 
     margin-bottom: 10px;
+    margin-right: 10px;
 
     cursor: pointer;
 }
