--- a/css/site.css
+++ b/css/site.css
@@ -4,6 +4,18 @@
 
 /* GENERAL: */
 html, body {
+    --crush40-red: rgb(105, 2, 2);
+    --crush40-red-hover: rgb(85, 2, 2);
+    --crush40-blue: darkblue;
+
+    --crush40-red-pale: rgb(90, 30, 30);
+    --crush40-red-pale-hover: rgb(120, 30, 30);
+    --crush40-blue-pale: rgb(30, 30, 90);
+    --crush40-blue-pale-hover: rgb(60, 30, 90);
+
+    --crush40-gray: rgb(169, 169, 169);
+    --crush40-darkgray: rgb(140, 140, 140);
+
     margin: 0;
     position: absolute;
     z-index: -2;
@@ -69,7 +81,7 @@ html, body {
 }
 
 .emptyButton {
-    border: solid 4px rgb(105, 2, 2);
+    border: solid 4px var(--crush40-red);
     background-color: transparent;
 }
 
@@ -79,11 +91,11 @@ html, body {
 
 .filledButton {
     border: none;
-    background-color: rgb(105, 2, 2);
+    background-color: var(--crush40-red);
 }
 
 .filledButton:hover {
-    background-color: rgb(85, 2, 2);
+    background-color: var(--crush40-red-hover);
 }
 
 .backgroundContainer {
@@ -127,7 +139,7 @@ html, body {
     z-index: 100;
 
     position: absolute;
-    background-color: rgb(169, 169, 169);
+    background-color: var(--crush40-gray);
     width: 100%;
     height: 100%;
     bottom: 0;
@@ -158,7 +170,7 @@ html, body {
     grid-area: titlebar;
 
     padding: 0;
-    background-color: rgb(140, 140, 140);
+    background-color: var(--crush40-darkgray);
 
     display: grid;
     grid-template-columns: 1fr auto;
@@ -235,7 +247,7 @@ html, body {
     top: 0;
     width: 100%;
     height: 80px;
-    background-color: rgb(60, 60, 60);
+    background-color: rgb(0, 0, 0, 0.4);
     z-index: 1;
 
     display: flex;
@@ -257,8 +269,8 @@ html, body {
     flex-direction: row;
 }
 
-.back {
-    background-color: red;
+.nav-items .back {
+    background-color: var(--crush40-red);
     transform: skew(-25deg);
 
     position: absolute;
