--- a/css/site.css
+++ b/css/site.css
@@ -210,6 +210,78 @@ html, body {
     }
 }
 
+/* NAVBAR */
+.nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    background-color: rgb(0, 0, 0, 0.4);
+    z-index: 1;
+
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: auto 1fr;
+    grid-template-areas: "logo items";
+
+    justify-items: flex-end;
+}
+
+.nav .logo {
+    margin: 10px;
+    max-height: 60px;
+}
+
+.nav .items {
+    grid-area: items;
+    
+    display: flex;
+    flex-direction: row;
+    list-style-type: none;
+    color: white;
+    
+    margin: 0;
+    padding: 0;
+    margin-right: 15px;
+    box-sizing: border-box;
+
+    align-self: center;
+}
+
+.nav .items li {
+    display: block;
+    margin: 10px;
+
+    width: 110px;
+    text-align: center;
+
+    --back-color: var(--crush40-red);
+
+    cursor: pointer;
+}
+
+.nav .items li:hover {
+    --back-color: var(--crush40-red-hover);
+}
+
+.nav .items li .back {
+    background-color: var(--back-color);
+    transform: skew(-25deg);
+
+    position: absolute;
+    margin-top: 5px;
+    width: 110px;
+    height: 40px;
+
+    z-index: -1;
+}
+
+.nav .items li p {
+    position: relative;
+
+    display: block;
+}
+
 /* OPENING */
 .opening {
     display: grid;
@@ -240,57 +312,4 @@ html, body {
     box-sizing: border-box;
     padding: 10px;
     margin: 0;
-}
-
-.nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 80px;
-    background-color: rgb(0, 0, 0, 0.4);
-    z-index: 1;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.nav-items {
-    padding: 0;
-    
-    list-style-type: none;
-
-    color: white;
-
-    margin-right: 10px;
-    box-sizing: border-box;
-
-    display: flex;
-    flex-direction: row;
-}
-
-.nav-items .back {
-    background-color: var(--crush40-red);
-    transform: skew(-25deg);
-
-    position: absolute;
-    margin-top: 5px;
-    width: 110px;
-    height: 40px;
-
-    z-index: -1;
-}
-
-.nav-items li {
-    display: block;
-    padding: 10px;
-
-    width: 110px;
-    text-align: center;
-}
-
-.nav-items li p {
-    position: relative;
-
-    display: block;
 }
