Use dark color for selected navbar

--- a/css/site.css
+++ b/css/site.css
@@ -268,7 +268,7 @@ html, body {
 }
 
 .nav .items .selected {
-    --back-color: darkred;
+    --back-color: var(--crush40-darkred);
 }
 
 .nav .items li .back {
