--- a/css/site.css
+++ b/css/site.css
@@ -282,14 +282,14 @@ html, body {
 
 .nav .btn {
     /* Button for mobile only */
-    visibility: hidden;
+    visibility: collapse;
 
     background-color: transparent;
     border: none;
 }
 
 /* Smallscreen Nav */
-@media (max-width: 1000px) {
+@media (max-width: 1040px) {
 
     .nav {
         align-items: flex-start;
